[gd_scene load_steps=2 format=3 uid="uid://dyc75iewallhd"]

[ext_resource type="Script" path="res://addons/easyleaderboard/api/EasyLeaderboard.gd" id="1_vlvap"]

[node name="EasyLeaderboard" type="Node"]
script = ExtResource("1_vlvap")

[node name="GetLeaderboardRequest" type="HTTPRequest" parent="."]

[node name="SubmitScoreRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="GetLeaderboardRequest" to="." method="_on_get_leaderboard_request_request_completed"]
[connection signal="request_completed" from="SubmitScoreRequest" to="." method="_on_submit_score_request_request_completed"]
