[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/easyleaderboard/api/EasyLeaderboard.gd" type="Script" id=1]
[ext_resource path="res://addons/easyleaderboard/leaderboard/LeaderboardScoreSubmitPanel.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=3]
script/source = "extends Control

signal new_game_button_pressed
signal main_menu_button_pressed

export var row_scene : PackedScene = preload(\"res://addons/easyleaderboard/leaderboard/LeaderboardRow.tscn\")
export var results_per_page = 10
export var current_page = 1
export var leaderboard_title = \"Leaderboard\"
export var show_new_game_button : bool = true
export var show_menu_button : bool = true

export var new_game_button_text : String = \"New Game\"
export var menu_button_text : String = \"Main Menu\"

export var easy_leaderboard_url = EasyLeaderboard.DEFAULT_EASY_LEADERBOARD_URL 
export var game_name = EasyLeaderboard.DEFAULT_GAME_NAME
export var sort_results_asc = EasyLeaderboard.DEFAULT_SORT_RESULTS_ASCENDING


export var show_submit_modal : bool = false setget _set_show_submit_modal
func _set_show_submit_modal(value):
	show_submit_modal = value
	if is_visible_in_tree():
		_handle_visible_panes()
			
export var submit_score : float = 0 setget _set_submit_score
func _set_submit_score(value):
	submit_score = value
	if is_visible_in_tree():
		_update_submit_score_panel_options()
		
export var submit_name : String setget _set_submit_name
func _set_submit_name(value):
	submit_name = value
	if is_visible_in_tree():
		_update_submit_score_panel_options()

export var submit_score_metadata = {} setget _set_submit_score_metadata
func _set_submit_score_metadata(value):
	submit_score_metadata = value
	if is_visible_in_tree():
		_update_submit_score_panel_options()

export var allow_cancel : bool = true setget _set_allow_cancel
func _set_allow_cancel(value):
	allow_cancel = value
	if is_visible_in_tree():
		_update_submit_score_panel_options()

onready var results_container : GridContainer = $LeaderboardPanel/ResultsGridContainer
onready var easy_leaderboard_api : EasyLeaderboard = $EasyLeaderboard
onready var prev_button : Button = $LeaderboardPanel/HeaderGridContainer/PrevButtonContainer/PrevButton
onready var next_button : Button = $LeaderboardPanel/HeaderGridContainer/NextButtonContainer/NextButton

# Called when the node enters the scene tree for the first time.
func _ready():
	_handle_visible_panes()
	if !show_submit_modal:
		_refresh_results()
	$LeaderboardPanel/HeaderGridContainer/LeaderboardTitle.text = leaderboard_title
	
	_handle_footer_section()
	
	_update_submit_score_panel_options()
	
func _handle_footer_section():
	$LeaderboardPanel/FooterGridContainer/MenuButtonContainer.visible = show_menu_button
	$LeaderboardPanel/FooterGridContainer/MenuButtonContainer/MenuButton.text = menu_button_text
	
	$LeaderboardPanel/FooterGridContainer/NewGameButtonContainer.visible = show_new_game_button
	$LeaderboardPanel/FooterGridContainer/NewGameButtonContainer/NewGameButton.text = new_game_button_text
	
	var footer_cols := 0
	if show_new_game_button:
		footer_cols += 1
	if show_menu_button:
		footer_cols += 1
	$LeaderboardPanel/FooterGridContainer.columns = footer_cols
	
	
	
func _update_submit_score_panel_options():
	$LeaderboardScoreSubmitPanel.score_name = submit_name
	$LeaderboardScoreSubmitPanel.score = submit_score
	$LeaderboardScoreSubmitPanel.score_metadata = submit_score_metadata
	$LeaderboardScoreSubmitPanel.allow_cancel = allow_cancel
	$LeaderboardScoreSubmitPanel.update_panel_settings()
	
func _check_prev_button_valid():
	prev_button.disabled = current_page == 1


func _on_easy_leaderboard_leaderboard_results_changed(results):
	# Remove old results
	for child in results_container.get_children():
		results_container.remove_child(child)
	
	var row_number = results_per_page * (current_page - 1)
	for result in results:
		row_number = row_number + 1
		
		var row = row_scene.instance()
		
		row.result_number = row_number
		row.score_name = result.name
		row.score_value = result.score
		
		results_container.add_child(row)
		
	# Add fake rows for spacing consistency
	while results_container.get_child_count() < results_per_page:
		var fake_row := row_scene.instance() as Node
		fake_row.modulate.a = 0 # make it invisible!
		results_container.add_child(fake_row)
		
	next_button.disabled = len(results) < results_per_page
	prev_button.disabled = current_page <= 1


func _on_next_button_pressed():	
	current_page = current_page + 1
	_refresh_results()

func _on_prev_button_pressed():
	current_page = current_page - 1
	_refresh_results()
	
func _refresh_results():
	next_button.disabled = true
	prev_button.disabled = true
	
	easy_leaderboard_api.current_page = current_page
	easy_leaderboard_api.page_size = results_per_page
	easy_leaderboard_api.game_name = game_name
	easy_leaderboard_api.sort_results_ascending = sort_results_asc
	
	easy_leaderboard_api.get_leaderboard_results()

# Handles showing the right pane (leaderboard or score submit)
func _handle_visible_panes():
	$LeaderboardPanel.visible = !show_submit_modal
	$LeaderboardScoreSubmitPanel.visible = show_submit_modal

func _on_leaderboard_score_submit_panel_leaderboard_score_canceled():
	show_submit_modal = false
	_handle_visible_panes()
	_refresh_results()


func _on_leaderboard_score_submit_panel_leaderboard_score_submitted(result):
	show_submit_modal = false
	_handle_visible_panes()
	# TODO - set the page to the right number based on result
	_calculate_page_for_result(result)
		
	_refresh_results()

func _calculate_page_for_result(result):
	var number_to_skip : int
	if sort_results_asc:
		number_to_skip = result.scoresLesser
	else:
		number_to_skip = result.scoresGreater
		
	# skip pages until we are on the page with the result we just submitted
	current_page = 1
	while number_to_skip > results_per_page:
		number_to_skip -= results_per_page
		current_page += 1
	

func _on_new_game_button_pressed():
	$LeaderboardPanel/FooterGridContainer/MenuButtonContainer/MenuButton.disabled = true
	$LeaderboardPanel/FooterGridContainer/NewGameButtonContainer/NewGameButton.disabled = true
	emit_signal(\"new_game_button_pressed\")

func _on_menu_button_pressed():
	$LeaderboardPanel/FooterGridContainer/MenuButtonContainer/MenuButton.disabled = true
	$LeaderboardPanel/FooterGridContainer/NewGameButtonContainer/NewGameButton.disabled = true
	emit_signal(\"main_menu_button_pressed\")
	
"

[node name="Leaderboard" type="Control"]
script = SubResource( 3 )

[node name="EasyLeaderboard" type="Node" parent="."]
script = ExtResource( 1 )

[node name="LeaderboardPanel" type="Panel" parent="."]
margin_right = 626.0
margin_bottom = 580.0

[node name="HeaderGridContainer" type="GridContainer" parent="LeaderboardPanel"]
margin_top = 10.0
margin_right = 623.0
margin_bottom = 38.0
size_flags_horizontal = 3
columns = 3

[node name="PrevButtonContainer" type="CenterContainer" parent="LeaderboardPanel/HeaderGridContainer"]
margin_right = 268.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="PrevButton" type="Button" parent="LeaderboardPanel/HeaderGridContainer/PrevButtonContainer"]
margin_left = 114.0
margin_right = 154.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Prev"

[node name="LeaderboardTitle" type="Label" parent="LeaderboardPanel/HeaderGridContainer"]
margin_left = 272.0
margin_top = 3.0
margin_right = 351.0
margin_bottom = 17.0
text = "Leaderboard"

[node name="NextButtonContainer" type="CenterContainer" parent="LeaderboardPanel/HeaderGridContainer"]
margin_left = 355.0
margin_right = 623.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="LeaderboardPanel/HeaderGridContainer/NextButtonContainer"]
margin_left = 113.0
margin_right = 155.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Next"

[node name="ResultsGridContainer" type="GridContainer" parent="LeaderboardPanel"]
margin_left = 33.0
margin_top = 35.0
margin_right = 591.0
margin_bottom = 535.0

[node name="CenterContainer" type="CenterContainer" parent="LeaderboardPanel/ResultsGridContainer"]
margin_right = 558.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="LeaderboardPanel/ResultsGridContainer/CenterContainer"]
margin_left = 248.0
margin_top = 243.0
margin_right = 309.0
margin_bottom = 257.0
text = "Loading..."

[node name="FooterGridContainer" type="GridContainer" parent="LeaderboardPanel"]
margin_left = 3.0
margin_top = 546.0
margin_right = 624.0
margin_bottom = 572.0
columns = 2

[node name="NewGameButtonContainer" type="CenterContainer" parent="LeaderboardPanel/FooterGridContainer"]
margin_right = 309.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="NewGameButton" type="Button" parent="LeaderboardPanel/FooterGridContainer/NewGameButtonContainer"]
margin_left = 113.0
margin_right = 195.0
margin_bottom = 20.0
text = "New Game"

[node name="MenuButtonContainer" type="CenterContainer" parent="LeaderboardPanel/FooterGridContainer"]
margin_left = 313.0
margin_right = 621.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="LeaderboardPanel/FooterGridContainer/MenuButtonContainer"]
margin_left = 112.0
margin_right = 195.0
margin_bottom = 20.0
text = "Main Menu"

[node name="LeaderboardScoreSubmitPanel" parent="." instance=ExtResource( 2 )]
margin_left = 163.0
margin_top = 119.0
margin_right = 463.0
margin_bottom = 419.0
easy_leaderboard_api_path = NodePath("../EasyLeaderboard")

[connection signal="leaderboard_results_changed" from="EasyLeaderboard" to="." method="_on_easy_leaderboard_leaderboard_results_changed"]
[connection signal="leaderboard_score_submitted" from="EasyLeaderboard" to="." method="_on_leaderboard_score_submit_panel_leaderboard_score_submitted"]
[connection signal="pressed" from="LeaderboardPanel/HeaderGridContainer/PrevButtonContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="LeaderboardPanel/HeaderGridContainer/NextButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="LeaderboardPanel/FooterGridContainer/NewGameButtonContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="LeaderboardPanel/FooterGridContainer/MenuButtonContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="leaderboard_score_canceled" from="LeaderboardScoreSubmitPanel" to="." method="_on_leaderboard_score_submit_panel_leaderboard_score_canceled"]
[connection signal="leaderboard_score_submitted" from="LeaderboardScoreSubmitPanel" to="." method="_on_leaderboard_score_submit_panel_leaderboard_score_submitted"]
